--- a/src/pages/song/components/SimiSong/index.css
+++ b/src/pages/song/components/SimiSong/index.css
@@ -1,6 +1,6 @@
 .simi-song {
   position: relative;
-  padding: 0 33.336rpx;
+  padding: 0 33.336px;
   color: #fff;
 }
 
@@ -13,7 +13,7 @@
 
 .simi-song .simi-header .title {
   font-weight: 500;
-  font-size: 35.4195rpx;
+  font-size: 35.4195px;
   line-height: 1.5;
 }
 
@@ -24,14 +24,14 @@
   align-items: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 12.501rpx 20.835rpx;
-  border: 0.6945rpx solid rgba(216,216,216,.2);
-  border-radius: 50.004rpx;
-  font-size: 25.002rpx;
+  padding: 12.501px 20.835px;
+  border: 0.6945px solid rgba(216,216,216,.2);
+  border-radius: 50.004px;
+  font-size: 25.002px;
 }
 
 .simi-song .simi-header .play-all-recommend .play-simi {
-  margin-right: 4.167rpx;
-  width: 25.002rpx;
-  height: 25.002rpx;
+  margin-right: 4.167px;
+  width: 25.002px;
+  height: 25.002px;
 }
