--- a/src/components/search/index.css
+++ b/src/components/search/index.css
@@ -1,28 +1,41 @@
-.container {
-  background-color: #f7f7f7;
-  border-radius: 40px;
+.search-box {
+  position: relative;
+  box-sizing: border-box;
+  margin: 20.835px 33.336px;
+  height: 72.9225px;
   display: flex;
-  align-items: center;
-  padding: 20px 25px;
 }
 
-.icon {
-  width: 40px;
-  height: 40px;
+.search-box .search-icon {
+  position: absolute;
+  top: 20.1405px;
+  left: 27.0855px;
+  width: 33.336px;
+  height: 33.336px;
 }
 
-.marginRight {
-  margin-right: 16px;
-}
-
-.marginLeft {
-  margin-left: 16px;
-}
-
-.input {
+.search-box .search-input {
+  padding-right: 81.2565px;
+  padding-left: 81.2565px;
+  height: 100%;
+  border-radius: 42.3645px;
+  background: rgba(0,0,0,.03);
+  font-size: 29.169px;
   border: none;
-  background-color: transparent;
-  font-size: 30px;
   flex-grow: 1;
-  text-align: left;
+}
+
+.search-box .delete-img {
+  position: absolute;
+  top: 0;
+  right: 20.835px;
+  /* padding: 24.3075px 20.835px; */
+  margin: 24.3075px 20.835px;
+  width: 25.002px;
+  height: 25.002px;
+}
+
+.search-box .input-placeholder {
+  color: #999;
+  font-size: 29.169px;
 }
