--- a/src/pages/playlist/components/Header/index.css
+++ b/src/pages/playlist/components/Header/index.css
@@ -1,7 +1,7 @@
 .header {
-  margin-top: 41.67rpx;
-  margin-bottom: 47.9205rpx;
-  padding: 0 33.336rpx;
+  margin-top: 41.67px;
+  margin-bottom: 47.9205px;
+  padding: 0 33.336px;
 }
 
 .header .intro {
@@ -9,7 +9,7 @@
   display: flex;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  height: 262.521rpx;
+  height: 262.521px;
 }
 
 .header .intro .intro-cover {
@@ -18,27 +18,27 @@
 }
 
 .header .intro .intro-cover .intro-img {
-  width: 262.521rpx;
+  width: 262.521px;
   height: 100%;
-  border-radius: 12.501rpx;
+  border-radius: 12.501px;
 }
 
 .header .intro .intro-cover .play_counts {
   position: absolute;
   top: 0;
-  right: 10.4175rpx;
+  right: 10.4175px;
   color: #fff;
-  font-size: 29.169rpx;
+  font-size: 29.169px;
 }
 
 .header .intro .intro-cover .play_counts .counts_icon {
-  margin-right: 3.4725rpx;
-  width: 20.835rpx;
-  height: 19.446rpx;
+  margin-right: 3.4725px;
+  width: 20.835px;
+  height: 19.446px;
 }
 
 .header .intro .intro-content {
-  width: 381.2805rpx;
+  width: 381.2805px;
   height: 100%;
   vertical-align: top;
 }
@@ -50,28 +50,28 @@
   text-overflow: ellipsis;
   white-space: normal;
   word-wrap: break-word;
-  font-size: 35.4195rpx;
+  font-size: 35.4195px;
   line-height: 1.4;
   line-clamp: 2;
 }
 
 .header .intro .intro-content .content-avatar {
   overflow: hidden;
-  margin-top: 25.002rpx;
-  margin-bottom: 27.0855rpx;
-  height: 54.171rpx;
+  margin-top: 25.002px;
+  margin-bottom: 27.0855px;
+  height: 54.171px;
   color: rgba(255,255,255,.8);
   text-overflow: ellipsis;
   white-space: nowrap;
   word-break: normal;
-  font-size: 27.0855rpx;
+  font-size: 27.0855px;
   line-height: 1.5;
 }
 
 .header .intro .intro-content .content-avatar .avatar-img {
   display: inline-block;
-  margin-right: 12.501rpx;
-  width: 54.171rpx;
+  margin-right: 12.501px;
+  width: 54.171px;
   height: 100%;
   border-radius: 50%;
   vertical-align: middle;
@@ -80,7 +80,7 @@
 .header .intro .intro-content .content-description {
   position: relative;
   color: rgba(255,255,255,.6);
-  font-size: 22.9185rpx;
+  font-size: 22.9185px;
   line-height: 1.5;
 }
 
@@ -95,10 +95,10 @@
 }
 
 .header .intro .intro-content .content-description .arrow {
-  right: -18.057rpx;
-  bottom: 4.167rpx;
-  margin-left: 4.8615rpx;
-  width: 20.835rpx;
-  height: 20.835rpx;
+  right: -18.057px;
+  bottom: 4.167px;
+  margin-left: 4.8615px;
+  width: 20.835px;
+  height: 20.835px;
   vertical-align: -4%;
 }
