--- a/src/pages/playlist/index.css
+++ b/src/pages/playlist/index.css
@@ -11,7 +11,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  filter: blur(27.78rpx);
+  filter: blur(27.78px);
   transform: scale(1.5);
   transform-origin: center top;
 }
@@ -26,8 +26,8 @@
 }
 
 .no-song {
-  padding-top: 32.6415rpx;
-  height: 262.521rpx;
+  padding-top: 32.6415px;
+  height: 262.521px;
   color: #333;
   text-align: center;
 }
@@ -39,7 +39,7 @@
 .playlist-wrap {
   overflow: hidden;
   width: 100%;
-  border-radius: 41.67rpx;
+  border-radius: 41.67px;
   background-color: #fff;
 }
 
@@ -52,37 +52,37 @@
   position: relative;
   -ms-flex-align: center;
   align-items: center;
-  padding: 31.2525rpx 33.336rpx;
+  padding: 31.2525px 33.336px;
   color: #333;
 }
 
 .playlist-wrap .list-item .play-icon {
-  margin-right: 29.169rpx;
-  width: 41.67rpx;
-  height: 41.67rpx;
+  margin-right: 29.169px;
+  width: 41.67px;
+  height: 41.67px;
 }
 
 .playlist-wrap .list-item .title {
-  margin-right: 7.6395rpx;
-  font-size: 33.336rpx;
+  margin-right: 7.6395px;
+  font-size: 33.336px;
 }
 
 .playlist-wrap .list-item .info {
   color: rgba(0,0,0,.3);
-  font-size: 27.0855rpx;
+  font-size: 27.0855px;
 }
 
 .btn-list {
-  margin-bottom: 41.67rpx;
-  height: 70.839rpx;
+  margin-bottom: 41.67px;
+  height: 70.839px;
   text-align: center;
 }
 
 .btn-list .btn-wrap {
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding-right: 33.336rpx;
-  padding-left: 33.336rpx;
+  padding-right: 33.336px;
+  padding-left: 33.336px;
 }
 
 .btn-list .btn {
@@ -93,14 +93,14 @@
   -ms-flex-pack: center;
   justify-content: center;
   margin: 0;
-  width: 331.2765rpx;
-  height: 70.839rpx;
+  width: 331.2765px;
+  height: 70.839px;
   border: 0;
-  border-radius: 35.4195rpx;
+  border-radius: 35.4195px;
   background-color: rgba(255,255,255,.1);
   color: #fff;
-  font-size: 29.169rpx;
-  line-height: 70.839rpx;
+  font-size: 29.169px;
+  line-height: 70.839px;
 }
 
 .btn-list .btn::after {
@@ -108,9 +108,9 @@
 }
 
 .btn-list .btn .btn-icon {
-  margin-right: 12.501rpx;
-  width: 29.169rpx;
-  height: 29.169rpx;
+  margin-right: 12.501px;
+  width: 29.169px;
+  height: 29.169px;
   vertical-align: middle;
 }
 
