--- a/src/pages/search/recommend/index.css
+++ b/src/pages/search/recommend/index.css
@@ -8,7 +8,7 @@
   display: flex;
 }
 
-.searchValue View {
+.searchValue .view {
   max-width: 60%;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -26,7 +26,7 @@
   padding: 30px 0;
 }
 
-.searchItem Image {
+.searchItem .image {
   width: 40px;
   height: 40px;
   padding-right: 20px;
