--- a/src/skeleton/playlist/index.css
+++ b/src/skeleton/playlist/index.css
@@ -1,47 +1,47 @@
 .m-skeleton-playlist {
-  padding: 0 33.336rpx;
+  padding: 0 33.336px;
 }
 
 .m-skeleton-playlist .empty {
-  height: 170.847rpx;
+  height: 170.847px;
 }
 
 .m-skeleton-playlist .intro {
-  margin-top: 27.78rpx;
-  margin-bottom: 47.9205rpx;
-  height: 262.521rpx;
+  margin-top: 27.78px;
+  margin-bottom: 47.9205px;
+  height: 262.521px;
 }
 
 .m-skeleton-playlist .intro .intro-cover {
   display: inline-block;
-  margin-right: 41.67rpx;
-  width: 262.521rpx;
+  margin-right: 41.67px;
+  width: 262.521px;
   height: 100%;
   background: rgba(0,0,0,.03);
 }
 
 .m-skeleton-playlist .intro .intro-content {
   display: inline-block;
-  width: 379.197rpx;
+  width: 379.197px;
   height: 100%;
   vertical-align: top;
 }
 
 .m-skeleton-playlist .intro .intro-content .content-title {
-  height: 34.725rpx;
+  height: 34.725px;
   background: rgba(0,0,0,.03);
 }
 
 .m-skeleton-playlist .intro .intro-content .content-avatar {
-  margin-top: 25.002rpx;
-  margin-bottom: 25.002rpx;
-  height: 54.171rpx;
+  margin-top: 25.002px;
+  margin-bottom: 25.002px;
+  height: 54.171px;
 }
 
 .m-skeleton-playlist .intro .intro-content .content-avatar .avatar-img {
   display: inline-block;
-  margin-right: 12.501rpx;
-  width: 54.171rpx;
+  margin-right: 12.501px;
+  width: 54.171px;
   height: 100%;
   border-radius: 50%;
   background: rgba(0,0,0,.03);
@@ -49,31 +49,31 @@
 
 .m-skeleton-playlist .intro .intro-content .content-avatar .avatar-name,.m-skeleton-playlist .play-all .play-icon {
   display: inline-block;
-  width: 120.1485rpx;
+  width: 120.1485px;
   height: 100%;
   background: rgba(0,0,0,.03);
 }
 
 .m-skeleton-playlist .intro .intro-content .content-description {
-  height: 90.285rpx;
+  height: 90.285px;
   background: rgba(0,0,0,.03);
 }
 
 .m-skeleton-playlist .play-all {
-  padding-top: 31.2525rpx;
-  padding-bottom: 31.2525rpx;
-  height: 50.004rpx;
+  padding-top: 31.2525px;
+  padding-bottom: 31.2525px;
+  height: 50.004px;
 }
 
 .m-skeleton-playlist .play-all .play-icon {
-  width: 50.004rpx;
+  width: 50.004px;
   border-radius: 50%;
 }
 
 .m-skeleton-playlist .play-all .title {
   display: inline-block;
-  margin-left: 54.171rpx;
-  width: 69.45rpx;
+  margin-left: 54.171px;
+  width: 69.45px;
   height: 100%;
   background: rgba(0,0,0,.03);
 }
@@ -84,14 +84,14 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   box-sizing: border-box;
-  padding-top: 29.169rpx;
-  padding-bottom: 32.6415rpx;
-  height: 125.01rpx;
+  padding-top: 29.169px;
+  padding-bottom: 32.6415px;
+  height: 125.01px;
 }
 
 .m-skeleton-playlist .playlist-wrap .list-item .order {
-  width: 61.8105rpx;
-  height: 61.8105rpx;
+  width: 61.8105px;
+  height: 61.8105px;
   background: rgba(0,0,0,.03);
 }
 
@@ -102,7 +102,7 @@
 }
 
 .m-skeleton-playlist .playlist-wrap .list-item .play-icon {
-  width: 61.8105rpx;
-  height: 61.8105rpx;
+  width: 61.8105px;
+  height: 61.8105px;
   background: rgba(0,0,0,.03);
 }
