--- a/src/components/PlayList/index.css
+++ b/src/components/PlayList/index.css
@@ -10,8 +10,8 @@
   border-bottom: 0.6945px solid rgba(0,0,0,.1);
   color: #333;
   font-size: 31.2525px;
-  padding-left: 104px;
-  border-bottom: 0;
+  /* padding-left: 104px;
+  border-bottom: 0; */
 }
 
 .m-play-list .list-item .order {
