feat: 更新remax依赖到2.15.4

--- a/src/pages/playlist/components/Header/index.css
+++ b/src/pages/playlist/components/Header/index.css
@@ -29,6 +29,7 @@
   right: 10.4175px;
   color: #fff;
   font-size: 29.169px;
+  margin-top: 5px;
 }
 
 .header .intro .intro-cover .play_counts .counts_icon {
