--- a/src/app.css
+++ b/src/app.css
@@ -19,9 +19,9 @@ page {
 }
 
 .btn-plain {
-  color: #353535;
-  border: 1px solid #353535;
-  background-color: transparent;
+  color: #353535 !important;
+  /* border: 1px solid #353535 !important; */
+  background-color: transparent !important;
 }
 
 button::after {
